encode categorical columns

--- a/classification.ipynb
+++ b/classification.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,10 @@
     "%matplotlib inline\n",
     "\n",
     "# libraries to handle missing data\n",
-    "from sklearn.impute import SimpleImputer"
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "# libraries to handle categorical data\n",
+    "from sklearn.preprocessing import OneHotEncoder"
    ]
   },
   {
@@ -1455,13 +1458,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "the `Name` column has all unique instances, hence this column cannot be encoded"
+    "the `Name` & `Ticket` columns has all unique instances, hence this column cannot be encoded because it will lead to `curse of dimensionality`\n",
+    "I'm gonna go with dropping the whole column and performing one-hot encoding on the rest of the categorical columns"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 93,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# dropping the Name and Ticket columns\n",
+    "df_obj.drop(['Name', 'Ticket'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# encoding the categorical data\n",
+    "encoder = OneHotEncoder()\n",
+    "df_obj_encoded = encoder.fit_transform(df_obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0., 0., 1.],\n",
+       "       [1., 0., 1., 0., 0.],\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       ...,\n",
+       "       [1., 0., 0., 0., 1.],\n",
+       "       [0., 1., 1., 0., 0.],\n",
+       "       [0., 1., 0., 1., 0.]])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_obj_encoded.toarray()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1491,20 +1537,6 @@
     "\n",
     "correlation_matrix[\"Survived\"].sort_values(ascending=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
